--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: noru08/fastbite:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/fastbite:latest
