--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Construir y Publicar Docker
+name: Build and Push All Services
 
 permissions:
   contents: read
@@ -8,13 +8,44 @@ on:
     branches: [ "main" ]
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  build-and-push:
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        service:
+          - name: user-service
+            path: services/user-service
+            port: 8081
+          - name: restaurant-service
+            path: services/restaurant-service
+            port: 8082
+          - name: order-service
+            path: services/order-service
+            port: 8083
+          # - name: notification-service
+          #   path: services/notification-service
+          #   port: 8084
+          - name: frontend
+            path: frontend
+            port: 8080
     
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew :${{ matrix.service.path }}:bootJar --no-daemon -x test
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -26,5 +57,10 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ${{ matrix.service.path }}/Dockerfile
           push: true
-          tags: noru08/fastbite:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/fastbite-${{ matrix.service.name }}:latest
+            ${{ secrets.DOCKER_USERNAME }}/fastbite-${{ matrix.service.name }}:${{ github.sha }}
+          build-args: |
+            SERVICE_PATH=${{ matrix.service.path }}
