--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,19 @@ name: Validar Pull Request
 
 on:
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
 
 jobs:
-  build-and-test:
+  test-services:
+    name: Test All Services
     runs-on: ubuntu-latest
 
     services:
       mongodb:
-        image: mongo:6.0
+        image: mongo:7.0
         ports:
           - 27017:27017
         options: >-
@@ -26,15 +27,91 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v4
 
-      # AQUÍ ESTÁ EL CAMBIO: Usamos Java 21
       - name: Configurar JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'      # Versión especificada
-          distribution: 'temurin' # Eclipse Temurin es muy estable
+          java-version: '21'
+          distribution: 'temurin'
 
       - name: Dar permisos a gradlew
         run: chmod +x gradlew
 
-      - name: Ejecutar pruebas con Gradle
-        run: ./gradlew test
+      - name: Ejecutar tests de todos los servicios
+        run: ./gradlew test --no-daemon
+
+      - name: Generar reporte de cobertura
+        run: ./gradlew jacocoTestReport --no-daemon
+        continue-on-error: true
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: |
+            **/build/test-results/test/*.xml
+            **/build/reports/tests/test/
+
+  build-check:
+    name: Build Check
+    runs-on: ubuntu-latest
+    needs: test-services
+
+    strategy:
+      matrix:
+        service:
+          - services:user-service
+          - services:restaurant-service
+          - services:order-service
+          - services:notification-service
+          - frontend
+
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v4
+
+      - name: Configurar JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Dar permisos a gradlew
+        run: chmod +x gradlew
+
+      - name: Build ${{ matrix.service }}
+        run: ./gradlew :${{ matrix.service }}:build -x test --no-daemon
+
+  docker-build-check:
+    name: Docker Build Check
+    runs-on: ubuntu-latest
+    needs: build-check
+
+    strategy:
+      matrix:
+        service:
+          - name: user-service
+            path: services/user-service
+          - name: restaurant-service
+            path: services/restaurant-service
+          - name: order-service
+            path: services/order-service
+          # - name: notification-service
+          #   path: services/notification-service
+          - name: frontend
+            path: frontend
+
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image (no push)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ matrix.service.path }}/Dockerfile
+          push: false
+          tags: fastbite-${{ matrix.service.name }}:pr-${{ github.event.pull_request.number }}
