--- a/services/notification-service/build.gradle
+++ b/services/notification-service/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     
     // Kafka para consumir eventos
     implementation 'org.springframework.kafka:spring-kafka'
