--- a/services/notification-service/build.gradle
+++ b/services/notification-service/build.gradle
@@ -1,25 +1,25 @@
-plugins {
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
-    id 'java'
-}
+// plugins {
+//     id 'org.springframework.boot'
+//     id 'io.spring.dependency-management'
+//     id 'java'
+// }
 
-dependencies {
-    //implementation project(':shared:fastbite-common')
+// dependencies {
+//     //implementation project(':shared:fastbite-common')
     
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+//     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+//     // Kafka para consumir eventos
+//     implementation 'org.springframework.kafka:spring-kafka'
+//     implementation 'io.projectreactor.kafka:reactor-kafka'
     
-    // Kafka para consumir eventos
-    implementation 'org.springframework.kafka:spring-kafka'
-    implementation 'io.projectreactor.kafka:reactor-kafka'
+//     compileOnly 'org.projectlombok:lombok'
+//     annotationProcessor 'org.projectlombok:lombok'
     
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+//     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+//     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+// }
