refactor: comment out shared directory copy in service Dockerfiles

--- a/services/notification-service/Dockerfile
+++ b/services/notification-service/Dockerfile
@@ -10,7 +10,7 @@ COPY settings.gradle .
 COPY build.gradle .
 
 # Copiar shared si existe
-COPY shared shared/
+# COPY shared shared/
 
 # Copiar código del servicio
 COPY services/notification-service services/notification-service/
