--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -1,40 +1,31 @@
-# --- ETAPA 1: Construcción (Builder) ---
+# --- ETAPA 1: Build ---
 FROM eclipse-temurin:21-jdk-jammy AS builder
 
 WORKDIR /app
 
-# Copiar archivos de configuración de Gradle
-COPY gradlew .
-COPY gradle gradle/
-COPY settings.gradle .
-COPY build.gradle .
+# Copiar TODO el monorepo
+COPY . .
 
-# # Copiar código fuente de shared (si existe)
-# COPY shared shared/
-
-# Copiar código fuente del servicio
-COPY services/user-service services/user-service/
-
-# Dar permisos de ejecución
+# Permisos para Gradle
 RUN chmod +x gradlew
 
-# Compilar solo este servicio
+# Compilar solo user-service
 RUN ./gradlew :services:user-service:bootJar --no-daemon -x test
 
-# --- ETAPA 2: Ejecución (Runner) ---
+# --- ETAPA 2: Runtime ---
 FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /app
 
+# Instalar curl para healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Copiar el JAR generado
 COPY --from=builder /app/services/user-service/build/libs/*.jar app.jar
 
-# Exponer puerto
 EXPOSE 8081
 
-# Health check endpoint
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
   CMD curl -f http://localhost:8081/actuator/health || exit 1
 
-# Comando para arrancar
 ENTRYPOINT ["java", "-jar", "app.jar"]
