refactor: fix HEALTHCHECK command in restaurant-service Dockerfile

--- a/services/restaurant-service/Dockerfile
+++ b/services/restaurant-service/Dockerfile
@@ -25,4 +25,7 @@ COPY --from=builder /app/services/restaurant-service/build/libs/*.jar app.jar
 
 EXPOSE 8082
 
-HEALTHCHECK --interval=30s --timeout=3s --star
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
+  CMD curl -f http://localhost:8082/actuator/health || exit 1
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
